footer added 	new file:   src/assets/svg/button-shape.svg 	new file:   src/assets/svg/filter.svg 	new file:   src/assets/svg/sale.svg 	new file:   src/assets/svg/select-filter.svg 	renamed:    src/components/UI/SVG/site-logo.svg -> src/assets/svg/site-logo.svg 	modified:   src/components/UI/index.js 	deleted:    src/components/UI/svg-icons/ui-btn-shape.vue 	modified:   src/components/UI/svg-icons/ui-icon-email.vue 	deleted:    src/components/UI/svg-icons/ui-icon-logo copy.vue 	modified:   src/components/UI/svg-icons/ui-icon-logo.vue 	deleted:    src/components/UI/svg-icons/ui-icon-phone-lg.vue 	modified:   src/components/UI/svg-icons/ui-icon-phone.vue 	deleted:    src/components/UI/svg-icons/ui-icon-shield.vue 	deleted:    src/components/UI/svg-icons/ui-icon-thumb-up.vue 	deleted:    src/components/UI/svg-icons/ui-icon-trust.vue 	modified:   src/components/UI/ui-button-main.vue 	deleted:    src/components/UI/ui-button-nav.vue 	new file:   src/components/UI/ui-comp-info.vue 	modified:   src/components/UI/ui-emblem-guarantee.vue 	modified:   src/components/UI/ui-emblem-quality.vue 	modified:   src/components/UI/ui-emblem-trust.vue 	modified:   src/components/UI/ui-nav-buttons.vue 	deleted:    src/components/UI/ui-sign-benefits.vue 	modified:   src/components/comp-contact.vue 	new file:   src/components/comp-filter-select.vue 	modified:   src/components/comp-menu.vue 	modified:   src/components/index.js 	modified:   src/styles/colors.scss 	modified:   src/styles/fonts.scss 	modified:   src/styles/index.scss 	modified:   src/styles/layouts.scss 	modified:   src/styles/resets.scss 	new file:   src/views/footer-section.vue 	modified:   src/views/main-page.vue 	new file:   src/views/main-section.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,8 +28,6 @@ body {
   scroll-behavior: smooth;
 }
 
-
-
 // Flexes
 @mixin flex-jcsb {
   display: flex;
@@ -40,6 +38,11 @@ body {
 @mixin flex-jcs {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+@mixin flex-jcr {
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
 @mixin flex-clmn {
@@ -53,3 +56,6 @@ body {
   @include media('min', 'sm') { @include flex-clmn }
   @include media('min', 'lg') { @include flex-jcsb }
 }
+
+// @include media('min', 'sm') { }
+// @include media('min', 'lg') { }
