--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,4 +3,8 @@ $black: #000000;
 $green-lt: #12AB51;
 $green-dk: #137039;
 $green-75: #12AB51BF;
+$green-sm: #38AB52;
+$grey-lt: #D9D9D9;
+$green-shad: drop-shadow(0px 0px 8px #A1FFB6);
+$light: #fff;
 
