--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -69,6 +69,9 @@
 :root {
   font-size: 16px;
 }
+body {
+  font-size: 16px;
+}
 body { font-family: 'Futura PT 400', Helvetica, sans-serif; }
 menu { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', sans-serif; }
 header { font-family: 'FuturaPTHeavyOblique', 'Futura PT 400', 'Inter 700', sans-serif; }
@@ -82,8 +85,12 @@ footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', s
   @include media('min', 'sm') {
     font-size: 1.3125rem;
     line-height: 1.24;
+    letter-spacing: 1.1px;
   }
-  @include media('min', 'lg') { font-size: 2rem; }
+  @include media('min', 'lg') { 
+    font-size: 2rem;
+    letter-spacing: 0px;
+  }
 }
 @mixin contact {
   color: #000;
@@ -97,10 +104,8 @@ footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', s
   color: #fff;
   font-family: 'Inter 500';
   font-style: normal;
-  line-height: 1.2;
+  line-height: 1.3;
   font-weight: 500;
-  @include media('min', 'sm') { font-size: 0.75rem; }
-  @include media('min', 'lg') { font-size: 0.875rem; }
 }
 @mixin header-title {
   color: #fff;
@@ -125,5 +130,27 @@ footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', s
   font-weight: 700;
   line-height: 1.25;
 }
+select {
+  font-family: 'Futura PT 600';
+  font-size: 18px;
+  line-height: 1.3;
+}
+option {
+  font-family: 'Futura PT 400';
+  font-size: 18px;
+  line-height: 1.3;
+}
 
+@mixin links {
+  font-family: 'Inter 700';
+  font-size: 0.875rem; // 14 
+  color: $light;
+}
+@mixin footer-txt {
+  font-family: 'Futura PT 400';
+  font-size: 0.875rem; // 14 
+  color: $light;
+}
 
+// @include media('min', 'sm') { }
+// @include media('min', 'lg') { }
