--- a/src/styles/resets.scss
+++ b/src/styles/resets.scss
@@ -15,3 +15,26 @@ button {
     outline: none;
   }
 }
+
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: none;
+  background-color: transparent;
+  border: none;
+  /* For IE10 */
+  select::-ms-expand {
+    display: none;
+  }
+  // text-indent: 1px;
+  // text-overflow: '';
+  &:focus {
+    outline: none;
+  }
+}
+
+li {
+  list-style: none;
+  text-decoration: none;
+}
