main button txt size fixed 	modified:   src/components/UI/ui-button-main.vue 	modified:   src/components/comp-menu.vue 	new file:   src/store/common.js 	modified:   src/store/index.js 	modified:   src/styles/index.scss 	renamed:    src/styles/backgrounds.scss -> src/styles/modules/backgrounds.scss 	renamed:    src/styles/colors.scss -> src/styles/modules/colors.scss 	renamed:    src/styles/fonts.scss -> src/styles/modules/fonts.scss 	renamed:    src/styles/layouts.scss -> src/styles/modules/layouts.scss 	renamed:    src/styles/resets.scss -> src/styles/modules/resets.scss 	modified:   src/views/footer-section.vue 	modified:   src/views/main-page.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
-@import './colors.scss';
-@import './fonts.scss';
-@import './layouts.scss';
-@import './resets.scss';
-@import './backgrounds.scss';
+@import './modules/colors.scss';
+@import './modules/fonts.scss';
+@import './modules/layouts.scss';
+@import './modules/resets.scss';
+@import './modules/backgrounds.scss';
 
 * {
   font-family: 'Futura PT 400', sans-serif;
