Swiper slider added to header 	modified:   package-lock.json 	modified:   package.json 	new file:   src/assets/images/1440/header_bg_1400-1.jpg 	new file:   src/assets/images/1440/header_bg_1400-1.webp 	new file:   src/assets/images/1440/header_bg_1400-2.jpg 	new file:   src/assets/images/1440/header_bg_1400-2.webp 	new file:   src/assets/images/1440/header_bg_1400-3.jpg 	new file:   src/assets/images/1440/header_bg_1400-3.webp 	new file:   src/assets/images/1440/header_bg_1400-4.jpg 	new file:   src/assets/images/1440/header_bg_1400-4.webp 	new file:   src/assets/images/768/header_bg_768-1.jpg 	new file:   src/assets/images/768/header_bg_768-1.webp 	new file:   src/assets/images/768/header_bg_768-2.jpg 	new file:   src/assets/images/768/header_bg_768-2.webp 	new file:   src/assets/images/768/header_bg_768-3.jpg 	new file:   src/assets/images/768/header_bg_768-3.webp 	new file:   src/assets/images/768/header_bg_768-4.jpg 	new file:   src/assets/images/768/header_bg_768-4.webp 	new file:   src/assets/images/door/door-2.jpg 	new file:   src/assets/images/door/door-2.webp 	new file:   src/assets/images/door/door.png 	new file:   src/assets/images/door/door.webp 	new file:   src/assets/svg/L.svg 	new file:   src/assets/svg/R.svg 	new file:   src/assets/svg/close.svg 	modified:   src/components/UI/ui-nav-buttons.vue 	new file:   src/components/comp-carousel.vue 	modified:   src/components/comp-menu.vue 	modified:   src/store/index.js 	renamed:    src/store/common.js -> src/store/modules/common.js 	new file:   src/store/modules/slider.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/backgrounds.scss 	modified:   src/styles/modules/layouts.scss 	modified:   src/views/header-section.vue 	modified:   src/views/main-page.vue 	modified:   vue.config.js

--- a/src/styles/modules/layouts.scss
+++ b/src/styles/modules/layouts.scss
@@ -34,7 +34,7 @@ $nav-height: 4.5rem;
 }
 
 
-// Top menu strip
+// Top menu info-blocks
 @mixin display-mode {
   @include media('min', 'sm') { display: none; }
   @include media('min', 'lg') { display: block; }
@@ -44,6 +44,7 @@ $nav-height: 4.5rem;
   @include media('min', 'sm') { width: 120px; }
   @include media('min', 'lg') { width: 191px; }
 }
+
 // Header
 @mixin header {
   @include media('min', 'sm') { 
