--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,6 +52,11 @@ body {
   align-items: flex-start;
   gap: 0;
 }
+@mixin fc-sb {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 @mixin flex-title {
   @include media('min', 'sm') { @include flex-clmn }
   @include media('min', 'lg') { @include flex-jcsb }
