dynamic tel / mail / links / company data 	modified:   src/components/UI/ui-comp-info.vue 	deleted:    src/components/comp-contact.vue 	modified:   src/components/comp-menu.vue 	modified:   src/components/index.js 	new file:   src/directives/index.js 	new file:   src/directives/tel-num.js 	modified:   src/main.js 	modified:   src/store/index.js 	modified:   src/store/modules/common.js 	new file:   src/store/modules/company.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/styles/modules/resets.scss 	modified:   src/views/footer-section.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,6 +35,12 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+@mixin fr-sb-c {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 @mixin flex-jcs {
   display: flex;
   justify-content: space-between;
