--- a/src/styles/modules/fonts.scss
+++ b/src/styles/modules/fonts.scss
@@ -82,6 +82,7 @@ footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', s
   font-family: 'Intro Demo';
   font-size: 2rem;
   line-height: normal;
+  text-transform: uppercase;
   @include media('min', 'sm') {
     font-size: 1.3125rem;
     line-height: 1.24;
