product object created. pics added 	modified:   src/App.vue 	renamed:    src/assets/images/door/door.webp -> src/assets/images/door/door1.webp 	new file:   src/assets/images/door/door2.webp 	new file:   src/assets/images/door/door3.webp 	new file:   src/assets/images/door/door4.webp 	new file:   src/assets/images/door/door5.webp 	new file:   src/assets/images/door/door6.webp 	new file:   src/assets/images/door/door7.webp 	new file:   src/assets/images/door/door8.webp 	modified:   src/components/UI/ui-nav-buttons.vue 	new file:   src/components/comp-modal.vue 	renamed:    src/components/comp-carousel.vue -> src/components/comp-slider-header.vue 	new file:   src/components/comp-slider-modal.vue 	renamed:    src/components/comp-template.vue -> src/components/template.vue 	modified:   src/store/index.js 	modified:   src/store/modules/common.js 	new file:   src/store/modules/product.js 	modified:   src/styles/modules/backgrounds.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/views/header-section.vue 	modified:   src/views/main-section.vue

--- a/src/styles/modules/fonts.scss
+++ b/src/styles/modules/fonts.scss
@@ -83,6 +83,10 @@ footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', s
   font-size: 2rem;
   line-height: normal;
   text-transform: uppercase;
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;      
+  user-select: none;
   @include media('min', 'sm') {
     font-size: 1.3125rem;
     line-height: 1.24;
