prod slider added 	new file:   src/components/UI/ui-art.vue 	modified:   src/components/comp-slider-header.vue 	new file:   src/components/comp-slider-modal-2.vue 	modified:   src/components/comp-slider-modal.vue 	modified:   src/components/index.js 	new file:   src/components/tmp-comp.vue 	renamed:    src/components/template.vue -> src/components/tmp.vue 	modified:   src/main.js 	modified:   src/store/modules/product.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/views/header-section.vue 	modified:   src/views/main-section.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,6 +41,18 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+@mixin fr-c-c {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+@mixin fc-sb-c {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 @mixin flex-jcs {
   display: flex;
   justify-content: space-between;
