added pop prod slider 	modified:   src/components/UI/index.js 	new file:   src/components/UI/svg-icons/ui-icon-close.vue 	modified:   src/components/UI/svg-icons/ui-icon-nav-arrow.vue 	modified:   src/components/comp-modal.vue 	renamed:    src/components/comp-slider-modal-2.vue -> src/components/comp-pop-slider.vue 	new file:   src/components/comp-prod-preview.vue 	modified:   src/styles/index.scss 	modified:   src/views/main-section.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,6 +27,11 @@ body {
   min-height: -webkit-fill-available;
   scroll-behavior: smooth;
 }
+// Grids
+@mixin gpc {
+  display: grid;
+  place-content: center;
+}
 
 // Flexes
 @mixin flex-jcsb {
