--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,14 +17,13 @@
 html {
   height: 100%;
   width: 100%;
-  scroll-behavior: smooth;
 }
 
 body {
   height: inherit;
   width: inherit;
   // mobile viewport bug fix */
-  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
   scroll-behavior: smooth;
 }
 // Grids
