--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
   font-size: 16px;
   padding: 0;
   margin: 0;
+
   box-sizing: border-box;
 }
 
@@ -25,6 +26,7 @@ body {
   // mobile viewport bug fix */
   height: -webkit-fill-available;
   scroll-behavior: smooth;
+  margin: 0!important;
 }
 // Grids
 @mixin gpc {
