keyboard events added 	modified:   src/App.vue 	modified:   src/components/UI/index.js 	new file:   src/components/UI/svg-icons/ui-icon-arr.vue 	modified:   src/components/UI/svg-icons/ui-icon-nav-arrow.vue 	modified:   src/components/UI/ui-art.vue 	modified:   src/components/UI/ui-nav-buttons.vue 	modified:   src/components/comp-menu.vue 	modified:   src/components/comp-modal.vue 	modified:   src/components/comp-pop-slider.vue 	modified:   src/components/comp-prod-preview.vue 	modified:   src/components/comp-slider-header.vue 	deleted:    src/components/comp-slider-modal.vue 	new file:   src/directives/body-hidden.js 	modified:   src/directives/index.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/styles/modules/layouts.scss 	new file:   src/styles/modules/media.scss 	new file:   src/styles/modules/other.scss 	modified:   src/views/footer-section.vue 	modified:   src/views/header-section.vue 	modified:   src/views/main-page.vue 	modified:   src/views/main-section.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,8 @@
 @import './modules/layouts.scss';
 @import './modules/resets.scss';
 @import './modules/backgrounds.scss';
+@import './modules/other.scss';
+@import './modules/media.scss';
 
 * {
   font-family: 'Futura PT 400', sans-serif;
@@ -42,6 +44,12 @@ body {
   align-items: center;
 }
 @mixin fr-sb-c {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.fr-sb-c {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
