--- a/src/styles/modules/layouts.scss
+++ b/src/styles/modules/layouts.scss
@@ -2,8 +2,6 @@
 // $breaks: ("sm":320px, "md":768px, "lg":1140px);
 $breaks: ("sm":0px, "lg":1440px);
 
-// NAV Menu
-$nav-height: 4.5rem;
 
 @mixin media($min-max, $media) {
   @each $size, $resolution in $breaks {
@@ -14,25 +12,24 @@ $nav-height: 4.5rem;
     }
   }
 }
-// Main screen
+
+// The page
 @mixin general-width {
   @include media('min', 'sm') { width: 320px; }
   @include media('min', 'lg') { width: 1440px; }
 }
-// Main container
+// Page container
 @mixin container-width {
   @include media('min', 'sm') { width: 300px; }
   @include media('min', 'lg') { width: 1400px; }
-}
-@mixin container-footer {
-  @include media('min', 'sm') { width: 300px; }
-  @include media('min', 'lg') { width: 1396px; }
 }
 @mixin container-paddings {
   @include media('min', 'sm') { padding: 0 10px; }
   @include media('min', 'lg') { padding: 0 20px; }
 }
 
+// NAV Menu
+$nav-height: 4.5rem;
 
 // Top menu info-blocks
 @mixin display-mode {
@@ -45,31 +42,70 @@ $nav-height: 4.5rem;
   @include media('min', 'lg') { width: 191px; }
 }
 
-// Header
+// *** Header ***
 @mixin header {
   @include media('min', 'sm') { 
-    height: 226px; 
+    flex: 0 0 226px; 
     border-radius: 1.1875rem;
   }
   @include media('min', 'lg') { 
-    height: 348px;
+    flex: 0 0 348px;
     border-radius: 1.9375rem;
   }
 }
-// Footer
+// *** Main ***
+@mixin main {
+  @include media('min', 'sm') { 
+    flex: 1 0 600px; 
+  }
+  @include media('min', 'lg') { 
+    flex: 1 0 600px;
+    
+  }
+}
+// *** Footer ***
+@mixin container-footer {
+  @include media('min', 'sm') { width: 300px; }
+  @include media('min', 'lg') { width: 1396px; }
+}
+
 @mixin footer {
   $r: 1.6875rem;
   border-radius: $r $r 0 0;
   @include media('min', 'sm') { 
-    height: 568px;
+    flex: 0 0 568px;
     width: 320px;
+    height: 568px;
     margin-left: -10px;
     margin-right: -10px;
   }
   @include media('min', 'lg') {
+    flex: 0 0 146px;
     height: 146px;
     width: 1440px;
     margin-left: -20px;
     margin-right: -20px;
   }
 }
+
+// Dynamic padding (if lack of vertical room)
+@mixin dyn-pd ($pd100, $pd80) {
+  $vph: 100vh;
+  $pd-df: $pd100 - $pd80;
+  $pd-prcnt: percentage((($vph - 80vh) / (100vh - 80vh)));
+  padding: $pd80;
+  padding: calc(#{$pd80} + #{$pd-prcnt} * #{$pd-df});
+}
+
+// $hts: ("sm":0px, "lg":1440px);
+
+
+// @mixin media($min-max, $media) {
+//   @each $size, $resolution in $breaks {
+//     @if $media == $size {
+//       @media only screen and (#{$min-max}-width: $resolution) {
+//         @content;
+//       }
+//     }
+//   }
+// }
