prod order block added 	new file:   src/assets/images/door/laura_005_side2.jpg 	new file:   src/assets/images/door/laura_005_side2.webp 	new file:   src/assets/images/door/lira_001_side2.jpg 	new file:   src/assets/images/door/lira_001_side2.webp 	new file:   src/assets/images/door/seul_045_side2.jpg 	new file:   src/assets/images/door/seul_045_side2.webp 	modified:   src/components/UI/index.js 	new file:   src/components/UI/svg-icons/ui-icon-door.vue 	new file:   src/components/UI/svg-icons/ui-icon-inStock.vue 	new file:   src/components/UI/svg-icons/ui-icon-phone-lg.vue 	new file:   src/components/UI/svg-icons/ui-icon-sale.vue 	new file:   src/components/UI/svg-icons/ui-icon-shop-cart.vue 	new file:   src/components/UI/svg-icons/ui-icon-size.vue 	deleted:    src/components/UI/svg-icons/ui-icon-temp.vue 	new file:   src/components/UI/ui-base-order-button.vue 	new file:   src/components/UI/ui-button-base.vue 	new file:   src/components/UI/ui-button-door-size.vue 	deleted:    src/components/UI/ui-button-main.vue 	new file:   src/components/UI/ui-button-opening.vue 	new file:   src/components/UI/ui-in-stock-block.vue 	new file:   src/components/UI/ui-order-button-footer.vue 	new file:   src/components/UI/ui-order-button-head.vue 	new file:   src/components/UI/ui-order-button-shop-cart.vue 	new file:   src/components/UI/ui-price-block-base.vue 	new file:   src/components/UI/ui-price.vue 	new file:   src/components/UI/ui-sale-star.vue 	modified:   src/components/comp-menu.vue 	modified:   src/components/comp-pop-slider.vue 	new file:   src/components/comp-prod-order-block.vue 	modified:   src/components/index.js 	modified:   src/store/modules/product.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/colors.scss 	new file:   src/styles/modules/flex.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/styles/modules/layouts.scss 	modified:   src/views/footer-section.vue 	modified:   src/views/main-section.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import './modules/backgrounds.scss';
 @import './modules/other.scss';
 @import './modules/media.scss';
+@import './modules/flex.scss';
 
 * {
   font-family: 'Futura PT 400', sans-serif;
@@ -13,7 +14,6 @@
   font-size: 16px;
   padding: 0;
   margin: 0;
-
   box-sizing: border-box;
 }
 
@@ -28,7 +28,6 @@ body {
   // mobile viewport bug fix */
   height: -webkit-fill-available;
   scroll-behavior: smooth;
-  margin: 0!important;
 }
 // Grids
 @mixin gpc {
@@ -36,59 +35,6 @@ body {
   place-content: center;
 }
 
-// Flexes
-@mixin flex-jcsb {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-@mixin fr-sb-c {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.fr-sb-c {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-@mixin fr-c-c {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-@mixin fc-sb-c {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-@mixin flex-jcs {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-@mixin flex-jcr {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-@mixin flex-clmn {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 0;
-}
-@mixin fc-sb {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
 @mixin flex-title {
   @include media('min', 'sm') { @include flex-clmn }
   @include media('min', 'lg') { @include flex-jcsb }
