--- a/src/styles/modules/colors.scss
+++ b/src/styles/modules/colors.scss
@@ -7,4 +7,9 @@ $green-sm: #38AB52;
 $grey-lt: #D9D9D9;
 $green-shad: drop-shadow(0px 0px 8px #A1FFB6);
 $light: #fff;
+$grey-90: #F5F5F5E5; // bg of size and open buttons
+$grey-63: #636363; // inStock text
+$dark-33: #333333; // Price block sale price
+$grey-b1: #B2B1B1; // Price block net price
+$grey-F5: #F5F5F5; // Prod order block
 
