--- a/src/styles/modules/fonts.scss
+++ b/src/styles/modules/fonts.scss
@@ -107,9 +107,9 @@ footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', s
 // Main button
 @mixin button-txt {
   font-family: 'Inter 500';
-  line-height: 1.3;
+  line-height: 1.2;
   font-weight: 500;
-  color: #a21414;
+  color: orange;
 }
 // h1 header
 @mixin header-title {
@@ -163,6 +163,25 @@ option {
   font-size: 1rem; // 16
   line-height: 1.25; // 20
   color: $light;
+}
+@mixin FT400-16-14 {
+  color:#333;
+  font-family: 'Futura PT 400';
+  line-height: 1.3;
+  @include media('min', 'sm') { font-size: 0.875rem; } // 14
+  @include media('min', 'lg') { font-size: 1rem; } // 16
+}
+@mixin FT400-16 {
+  color:#333;
+  font-family: 'Futura PT 400';
+  line-height: 1.3;
+  font-size: 1rem;;
+}
+@mixin FT600-12 {
+  color:#fff;
+  font-family: 'Futura PT 600';
+  line-height: 1.3;
+  font-size: .75rem;;
 }
 
 // @include media('min', 'sm') { }
