save changes with err 'addEventListener' of Thumbs 	new file:   src/assets/images/door/door-1.png 	deleted:    src/assets/images/door/door.png 	new file:   src/assets/images/door/door10.png 	new file:   src/assets/images/door/door10.webp 	new file:   src/assets/images/door/door2.png 	new file:   src/assets/images/door/door3.png 	new file:   src/assets/images/door/door4.png 	new file:   src/assets/images/door/door5.png 	new file:   src/assets/images/door/door6.png 	new file:   src/assets/images/door/door7.png 	new file:   src/assets/images/door/door8.png 	new file:   src/assets/images/door/door9.png 	new file:   src/assets/images/door/door9.webp 	modified:   src/components/UI/ui-button-base.vue 	modified:   src/components/comp-menu.vue 	modified:   src/components/comp-pop-slider.vue 	modified:   src/components/comp-prod-order-block.vue 	modified:   src/components/comp-prod-preview.vue 	new file:   src/components/comp-prod-slider.vue 	modified:   src/main.js 	modified:   src/store/modules/product.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/colors.scss 	modified:   src/styles/modules/flex.scss 	modified:   src/styles/modules/layouts.scss 	modified:   src/styles/modules/other.scss 	new file:   src/styles/swiper/setts.css 	modified:   src/views/main-section.vue

--- a/src/styles/modules/colors.scss
+++ b/src/styles/modules/colors.scss
@@ -13,3 +13,5 @@ $dark-33: #333333; // Price block sale price
 $grey-b1: #B2B1B1; // Price block net price
 $grey-F5: #F5F5F5; // Prod order block
 
+$grey-C3: #C3C3C3; // Description in prod slide
+
