--- a/src/styles/modules/flex.scss
+++ b/src/styles/modules/flex.scss
@@ -15,11 +15,12 @@
   justify-content: flex-end;
   align-items: center;
 }
-
+// flex row
 @mixin fr {
   display: flex;
   flex-direction: row;
 }
+// js space between
 @mixin fr-sb {
   @include fr;
   justify-content: space-between;
@@ -28,6 +29,7 @@
   @include fr-sb;
   align-items: center;
 }
+// js start
 @mixin fr-st {
   @include fr;
   justify-content: flex-start;
@@ -36,7 +38,7 @@
   @include fr-st;
   align-items: center;
 }
-
+// js center
 @mixin fr-c-c {
   display: flex;
   flex-direction: row;
@@ -50,6 +52,7 @@
   display: flex;
   flex-direction: column;
 }
+// js space-between
 @mixin fc-sb {
   @include fc;
   justify-content: space-between;
@@ -62,6 +65,7 @@
   @include fc-sb;
   align-items: center;
 }
+// js start
 @mixin fc-st {
   @include fc;
   justify-content: flex-start;
@@ -70,7 +74,16 @@
   @include fc-st;
   align-items: flex-start;
 }
-
+// jc center
+@mixin fc-c {
+  @include fc;
+  justify-content: center;
+}
+@mixin fc-c-st {
+  @include fc-c;
+  align-items: flex-start;
+}
+// ***********
 @mixin flex-clmn {
   display: flex;
   flex-direction: column;
@@ -78,3 +91,4 @@
   align-items: flex-start;
   gap: 0;
 }
+
