--- a/src/styles/modules/layouts.scss
+++ b/src/styles/modules/layouts.scss
@@ -95,3 +95,6 @@ $breaks: ("sm":0px, "lg":1440px);
 //     }
 //   }
 // }
+
+// @include media('min', 'sm') { }
+// @include media('min', 'lg') { }
