p-pixel adjustments 	new file:   src/components/UI/ui-button-details.vue 	modified:   src/components/UI/ui-button-door-size.vue 	new file:   src/components/UI/ui-button-open-slider.vue 	modified:   src/components/UI/ui-button-opening.vue 	modified:   src/components/UI/ui-order-button-shop-cart.vue 	modified:   src/components/UI/ui-price-block-base.vue 	modified:   src/components/UI/ui-sale-star.vue 	modified:   src/components/comp-filter-select.vue 	new file:   src/components/comp-prod-info.vue 	modified:   src/components/comp-prod-order-block.vue 	modified:   src/components/comp-prod-preview.vue 	modified:   src/components/comp-prod-slider.vue 	new file:   src/components/comp-product-section.vue 	modified:   src/styles/modules/flex.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/styles/modules/layouts.scss 	new file:   src/views/aside-section.vue 	modified:   src/views/footer-section.vue 	modified:   src/views/header-section.vue 	modified:   src/views/main-page.vue 	modified:   src/views/main-section.vue

--- a/src/styles/modules/flex.scss
+++ b/src/styles/modules/flex.scss
@@ -38,6 +38,14 @@
   @include fr-st;
   align-items: center;
 }
+@mixin fr-nd {
+  @include fr;
+  justify-content: flex-end;
+}
+@mixin fr-nd-c {
+  @include fr-nd;
+  align-items: center;
+}
 // js center
 @mixin fr-c-c {
   display: flex;
@@ -51,6 +59,10 @@
 @mixin fc {
   display: flex;
   flex-direction: column;
+}
+@mixin fcr {
+  display: flex;
+  flex-direction: column-reverse;
 }
 // js space-between
 @mixin fc-sb {
