--- a/src/styles/modules/fonts.scss
+++ b/src/styles/modules/fonts.scss
@@ -78,6 +78,13 @@ header { font-family: 'FuturaPTHeavyOblique', 'Futura PT 400', 'Inter 700', sans
 main { font-family: 'Futura PT 400', 'Futura PT 450', 'Futura PT 600', sans-serif; }
 footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', sans-serif; }
 
+@mixin IntroDemo-32-21 {
+  font-family: 'Intro Demo';
+  text-transform: uppercase;
+  @include media('min', 'sm') { font-size: 22.5px; } // 21
+  @include media('min', 'lg') { font-size: 32px; }
+}
+
 @mixin site-title {
   font-family: 'Intro Demo';
   font-size: 2rem;
@@ -93,8 +100,6 @@ footer { font-family: 'Intro Demo', 'Inter 500', 'Inter 700', 'Futura PT 400', s
     letter-spacing: 0px;
   }
 }
-
-
 
 @mixin contact {
   color: #000;
@@ -148,16 +153,6 @@ option {
   line-height: 1.3;
 }
 
-@mixin links {
-  font-family: 'Inter 700';
-  font-size: 0.875rem; // 14 
-  color: $light;
-}
-@mixin footer-txt {
-  font-family: 'Futura PT 400';
-  font-size: 0.875rem; // 14 
-  color: $light;
-}
 @mixin art {
   font-family: 'Futura PT 400';
   font-size: 1rem; // 16
@@ -181,7 +176,18 @@ option {
   color:#fff;
   font-family: 'Futura PT 600';
   line-height: 1.3;
-  font-size: .75rem;;
+  font-size: .75rem;
+}
+@mixin FT450-14 {
+  font-family: 'Futura PT 450';
+  line-height: 1.3;
+  font-size: 0.875rem; // 14
+}
+@mixin FT450-14-16 {
+  font-family: 'Futura PT 450';
+  line-height: 1.3;
+  @include media('min', 'sm') { font-size: 0.875rem; } // 14
+  @include media('min', 'lg') { font-size: 1rem; } // 16
 }
 
 // @include media('min', 'sm') { }
