End price block pagination added 	new file:   src/components/UI/ui-pagination-bullet.vue 	new file:   src/components/UI/ui-pagination.vue 	modified:   src/components/UI/ui-price-block-base.vue 	modified:   src/components/comp-prod-order-block.vue 	modified:   src/components/comp-prod-slider.vue 	modified:   src/components/comp-product-section.vue 	modified:   src/store/modules/product.js 	modified:   src/store/modules/slider.js 	modified:   src/styles/modules/colors.scss

--- a/src/styles/modules/colors.scss
+++ b/src/styles/modules/colors.scss
@@ -15,6 +15,7 @@ $grey-F5: #F5F5F5; // Prod order block
 
 $grey-C3: #C3C3C3; // Description in prod slide
 $grey-60: #636060; // Article buttons txt
+$grey-58: #585858; // Active bullet
 
 
 // @include media('min', 'sm') { }
