2023-01-05 commit, before 'main prod loop' 	modified:   public/index.html 	modified:   src/components/UI/ui-button-details.vue 	modified:   src/components/UI/ui-button-door-size.vue 	modified:   src/components/UI/ui-in-stock-block.vue 	renamed:    src/components/UI/ui-pagination-bullet.vue -> src/components/UI/ui-pagination-block.vue 	deleted:    src/components/UI/ui-pagination.vue 	modified:   src/components/UI/ui-price-block-base.vue 	modified:   src/components/UI/ui-price.vue 	modified:   src/components/UI/ui-sale-star.vue 	modified:   src/components/comp-modal.vue 	deleted:    src/components/comp-pop-slider.vue 	modified:   src/components/comp-preview-slider.vue 	modified:   src/components/comp-prod-info.vue 	modified:   src/components/comp-prod-order-block.vue 	modified:   src/components/comp-prod-preview.vue 	modified:   src/components/comp-prod-slider.vue 	modified:   src/components/comp-product-section.vue 	modified:   src/components/comp-slider-header.vue 	new file:   src/directives/bool-to-string.js 	modified:   src/directives/index.js 	modified:   src/store/modules/common.js 	modified:   src/store/modules/product.js 	modified:   src/store/modules/slider.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/flex.scss 	deleted:    src/styles/swiper/setts.css 	modified:   src/views/main-section.vue

--- a/src/styles/modules/flex.scss
+++ b/src/styles/modules/flex.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: row;
 }
-// js space between
+// jc space between
 @mixin fr-sb {
   @include fr;
   justify-content: space-between;
@@ -29,7 +29,7 @@
   @include fr-sb;
   align-items: center;
 }
-// js start
+// jc start
 @mixin fr-st {
   @include fr;
   justify-content: flex-start;
@@ -38,12 +38,22 @@
   @include fr-st;
   align-items: center;
 }
+// jc end
 @mixin fr-nd {
   @include fr;
   justify-content: flex-end;
 }
 @mixin fr-nd-c {
   @include fr-nd;
+  align-items: center;
+}
+// jc evenly
+@mixin fr-ev {
+  @include fr;
+  justify-content: space-evenly;
+}
+@mixin fr-ev-c {
+  @include fr-ev;
   align-items: center;
 }
 // js center
