--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,6 +20,7 @@
 html {
   height: 100%;
   width: 100%;
+  scrollbar-gutter: stable;
 }
 
 body {
@@ -29,6 +30,7 @@ body {
   height: -webkit-fill-available;
   scroll-behavior: smooth;
 }
+
 
 // @include media('min', 'sm') { }
 // @include media('min', 'lg') { }
