Sidebar filter added, filter setts object 	new file:   src/components/UI/svg-icons/ui-icon-check.vue 	new file:   src/components/UI/svg-icons/ui-icon-filter.vue 	modified:   src/components/UI/ui-button-base.vue 	modified:   src/components/UI/ui-button-door-size.vue 	new file:   src/components/UI/ui-button-filters-run.vue 	new file:   src/components/UI/ui-button-filters.vue 	modified:   src/components/UI/ui-button-opening.vue 	new file:   src/components/UI/ui-button-toggle.vue 	new file:   src/components/UI/ui-input-check.vue 	modified:   src/components/UI/ui-pagination-block.vue 	new file:   src/components/comp-filter-block.vue 	modified:   src/components/comp-prod-info.vue 	modified:   src/components/comp-product-section.vue 	renamed:    src/components/comp-filter-select.vue -> src/components/comp-sorter-select.vue 	modified:   src/directives/bool-to-string.js 	modified:   src/store/index.js 	modified:   src/store/modules/common.js 	new file:   src/store/modules/product copy.js 	modified:   src/store/modules/product.js 	new file:   src/store/modules/products/actions.js 	new file:   src/store/modules/products/getters.js 	new file:   src/store/modules/products/mutations.js 	new file:   src/store/modules/products/state.js 	modified:   src/styles/modules/colors.scss 	modified:   src/styles/modules/flex.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/styles/modules/resets.scss 	deleted:    src/views/aside-section.vue 	modified:   src/views/footer-section.vue 	modified:   src/views/header-section.vue 	modified:   src/views/main-page.vue 	modified:   src/views/main-section.vue 	new file:   src/views/sidebar-section.vue

--- a/src/styles/modules/flex.scss
+++ b/src/styles/modules/flex.scss
@@ -96,6 +96,10 @@
   @include fc-st;
   align-items: flex-start;
 }
+@mixin fc-st-c {
+  @include fc-st;
+  align-items: center;
+}
 // jc center
 @mixin fc-c {
   @include fc;
