--- a/src/styles/modules/colors.scss
+++ b/src/styles/modules/colors.scss
@@ -1,19 +1,22 @@
 // MacBook Pro 9 / 10
 $black: #000000;
+$light: #fff;
+
 $green-lt: #12AB51; //
 $green-dk: #137039;
 $green-75: #12AB51BF;
 $green-sm: #38AB52;
-$grey-lt: #D9D9D9;
+
 $green-shad: drop-shadow(0px 0px 8px #A1FFB6);
-$light: #fff;
+$grey-lt: #D9D9D9;
+
 $grey-90: #F5F5F5E5; // bg of size and open buttons
 $grey-63: #636363; // inStock text
-$dark-33: #333333; // Price block sale price
+$dark-33: #333333; // Price block sale price / Filter button txt
 $grey-b1: #B2B1B1; // Price block net price
 $grey-F5: #F5F5F5; // Prod order block
 
-$grey-C3: #C3C3C3; // Description in prod slide
+$grey-C3: #C3C3C3; // Description in prod slide / filter icon
 $grey-60: #636060; // Article buttons txt
 $grey-58: #585858; // Active bullet
 
