--- a/src/styles/modules/fonts.scss
+++ b/src/styles/modules/fonts.scss
@@ -178,10 +178,21 @@ option {
   line-height: 1.3;
   font-size: .75rem;
 }
+@mixin FT600-18 {
+  color:#fff;
+  font-family: 'Futura PT 600';
+  line-height: 1.3;
+  font-size: 1.125rem; // 18
+}
 @mixin FT450-14 {
   font-family: 'Futura PT 450';
   line-height: 1.3;
   font-size: 0.875rem; // 14
+}
+@mixin FT450-16 {
+  font-family: 'Futura PT 450';
+  line-height: 1.3;
+  font-size: 1rem; // 16
 }
 @mixin FT450-14-16 {
   font-family: 'Futura PT 450';
