--- a/src/styles/modules/resets.scss
+++ b/src/styles/modules/resets.scss
@@ -4,6 +4,7 @@ a {
 }
 
 button {
+  width: 100%;
   padding: 0;
   border: none;
   font: inherit;
@@ -33,6 +34,26 @@ select {
   &:focus {
     outline: none;
   }
+}
+fieldset {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: none;
+  border: none;
+}
+input {
+  border: none;
+  outline: none;
+  border-style: none;
+  border-color: transparent;
+  overflow: hidden;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  resize: none; /*remove the resize handle on the bottom right*/
+  padding: 0;
+  margin: 0;
 }
 
 li {
