prod order pop-up block 	modified:   src/App.vue 	new file:   src/assets/images/door/door-placeholder.webp 	new file:   src/assets/images/door/placeholder.webp 	modified:   src/components/UI/index.js 	new file:   src/components/UI/svg-icons/ui-icon-facebook.vue 	modified:   src/components/UI/svg-icons/ui-icon-shop-cart.vue 	new file:   src/components/UI/svg-icons/ui-icon-telegram.vue 	new file:   src/components/UI/svg-icons/ui-icon-viber.vue 	modified:   src/components/UI/ui-base-order-button.vue 	modified:   src/components/UI/ui-button-door-size.vue 	modified:   src/components/UI/ui-button-open-slider.vue 	modified:   src/components/UI/ui-button-opening.vue 	modified:   src/components/UI/ui-button-toggle.vue 	deleted:    src/components/UI/ui-input-text.vue 	modified:   src/components/UI/ui-order-button-footer.vue 	modified:   src/components/UI/ui-order-button-head.vue 	new file:   src/components/UI/ui-order-button-purchase.vue 	modified:   src/components/UI/ui-order-button-shop-cart.vue 	new file:   src/components/UI/ui-order-button.vue 	modified:   src/components/UI/ui-pagination-block.vue 	modified:   src/components/comp-filter-block.vue 	modified:   src/components/comp-menu.vue 	modified:   src/components/comp-modal.vue 	new file:   src/components/comp-order-tech-info.vue 	modified:   src/components/comp-pop-callback.vue 	new file:   src/components/comp-pop-order.vue 	modified:   src/components/comp-prod-info.vue 	modified:   src/components/comp-prod-order-block.vue 	modified:   src/components/comp-prod-preview-slider.vue 	deleted:    src/components/comp-prod-preview.vue 	modified:   src/components/comp-prod-slider.vue 	modified:   src/components/comp-product-section.vue 	modified:   src/components/comp-sorter-select.vue 	modified:   src/store/index.js 	modified:   src/store/modules/common.js 	modified:   src/store/modules/company.js 	modified:   src/store/modules/products/actions.js 	modified:   src/store/modules/products/getters.js 	modified:   src/store/modul

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,7 +20,7 @@
 html {
   height: 100%;
   width: 100%;
-  scrollbar-gutter: stable;
+  scrollbar-gutter: stable both-edges;
 }
 
 body {
@@ -30,7 +30,3 @@ body {
   height: -webkit-fill-available;
   scroll-behavior: smooth;
 }
-
-
-// @include media('min', 'sm') { }
-// @include media('min', 'lg') { }
