--- a/src/styles/modules/colors.scss
+++ b/src/styles/modules/colors.scss
@@ -1,5 +1,6 @@
 // MacBook Pro 9 / 10
 $black: #000000;
+$black-12: #121212;
 $light: #fff;
 
 $green-lt: #12AB51; //
@@ -19,7 +20,8 @@ $grey-F5: #F5F5F5; // Prod order block
 $grey-C3: #C3C3C3; // Description in prod slide / filter icon
 $grey-60: #636060; // Article buttons txt
 $grey-58: #585858; // Active bullet
-
+$grey-C6: #C6C6C6; // Input border
+$grey-CD: #CDCDCD; // Input placeholder
 
 // @include media('min', 'sm') { }
 // @include media('min', 'lg') { }
