--- a/src/styles/modules/fonts.scss
+++ b/src/styles/modules/fonts.scss
@@ -166,6 +166,12 @@ option {
   @include media('min', 'sm') { font-size: 0.875rem; } // 14
   @include media('min', 'lg') { font-size: 1rem; } // 16
 }
+@mixin FT400 {
+  font-family: 'Futura PT 400';
+  line-height: 1.3;
+  font-size: 1rem;
+  color: $black;
+}
 @mixin FT400-16 {
   color:#333;
   font-family: 'Futura PT 400';
