modal wind shift fixed 	modified:   src/components/UI/ui-base-order-button.vue 	modified:   src/components/UI/ui-button-base.vue 	modified:   src/components/UI/ui-input-check.vue 	modified:   src/components/comp-filter-block.vue 	modified:   src/components/comp-modal.vue 	modified:   src/components/comp-pop-callback.vue 	modified:   src/components/comp-pop-order.vue 	modified:   src/directives/body-hidden.js 	modified:   src/store/modules/products/actions.js 	modified:   src/styles/index.scss 	modified:   src/styles/modules/colors.scss 	modified:   src/styles/modules/fonts.scss 	modified:   src/views/footer-section.vue 	modified:   src/views/main-page.vue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,13 +20,14 @@
 html {
   height: 100%;
   width: 100%;
-  scrollbar-gutter: stable both-edges;
+  // scrollbar-gutter: stable both-edges;
 }
 
 body {
   height: inherit;
   width: inherit;
-  // mobile viewport bug fix */
+  // * mobile viewport bug fix * /
   height: -webkit-fill-available;
   scroll-behavior: smooth;
+  // scrollbar-gutter: stable both-edges;
 }
