--- a/src/styles/modules/colors.scss
+++ b/src/styles/modules/colors.scss
@@ -11,7 +11,7 @@ $green-sm: #38AB52;
 $green-shad: drop-shadow(0px 0px 8px #A1FFB6);
 $grey-lt: #D9D9D9;
 
-$grey-90: #F5F5F5E5; // bg of size and open buttons
+$grey-90: #F5F5F5E5; // bg of size and open side buttons
 $grey-63: #636363; // inStock text
 $dark-33: #333333; // Price block sale price / Filter button txt
 $grey-b1: #B2B1B1; // Price block net price
